# BusinessManagementSystem

./: .replit  README.md  automated_file.txt  pyproject.toml  replit.nix  settings.py
BusinessManagementSystem/: Settings.py  db.sqlite3
BusinessManagementSystem/BusinessManagementSystem/: settings.py  urls.py
aenzbi-erp/frontend/: package-lock.json
aenzbi-erp/functions/: package-lock.json  package.json
management/: forms.py  modeles.py  urls.py  views.py
management/templetes/management/: index.html
