[tool.poetry]
name = "repl-nix-bms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_bms"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
